<resources>
	<string name="app_name">My App Portfolio</string>
	<string name="action_settings">Settings</string>
	<string name="my_nanodegree_apps">My Nanodegree Apps!</string>

	<!-- buttons -->
	<string name="movies">movies</string>
	<string name="scores">football scores</string>
	<string name="library_app">library app</string>
	<string name="build_it_bigger">build it bigger</string>
	<string name="xyz_reader">xyz reader</string>
	<string name="capstone">capstone: my own app</string>
	<string name="substr_launch">This button will launch the \'%1$s\' app!</string>
</resources>
