<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivityFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dip"
			android:layout_marginTop="8dip"
			android:text="@string/my_nanodegree_apps"
			android:textColor="@color/primary"
			android:textSize="24sp"/>

		<Button
			android:id="@+id/fragment_main_btn_movies"
			android:layout_width="240dip"
			android:layout_height="60dip"
			android:text="@string/movies"/>

		<Button
			android:id="@+id/fragment_main_btn_scores"
			android:layout_width="240dip"
			android:layout_height="60dip"
			android:text="@string/scores"/>

		<Button
			android:id="@+id/fragment_main_btn_library"
			android:layout_width="240dip"
			android:layout_height="60dip"
			android:text="@string/library_app"/>

		<Button
			android:id="@+id/fragment_main_btn_bigger"
			android:layout_width="240dip"
			android:layout_height="60dip"
			android:text="@string/build_it_bigger"/>

		<Button
			android:id="@+id/fragment_main_btn_reader"
			android:layout_width="240dip"
			android:layout_height="60dip"
			android:text="@string/xyz_reader"/>

		<Button
			android:id="@+id/fragment_main_btn_capstone"
			android:layout_width="240dip"
			android:layout_height="60dip"
			android:backgroundTint="#009688"
			android:text="@string/capstone"/>

	</LinearLayout>
</ScrollView>